--- a/myg/index.html
+++ b/myg/index.html
@@ -66,7 +66,7 @@
         }
 
         .page-header {
-            margin: 0 -2.5cm 20px -2.5cm; /* Negative margin to make header full-width */
+            margin: -1.8cm -2.5cm 20px -2.5cm; /* Negative margin to make header full-width */
             flex-shrink: 0;
         }
 
@@ -76,7 +76,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 2px;
+        }
+        
+        .page-header.subsequent .header-top-box {
+            margin-bottom: 0;
         }
         
         .header-title-main {
@@ -213,8 +216,8 @@
             align-items: flex-end;
             font-size: 8pt;
             color: var(--secondary-text);
-            padding-top: 15px;
-            margin-top: auto; /* Pushes footer to the bottom */
+            margin: auto -2.5cm -1.8cm; /* Pushes footer to the bottom & makes it full-width */
+            padding: 15px 2.5cm 1.8cm; /* Add padding back to content, including bottom */
             border-top: 1px solid var(--border-color);
             flex-shrink: 0; /* Prevent footer from shrinking */
         }
@@ -346,11 +349,6 @@
                  </div>
                  <img src="https://imgix3.ruangguru.com/assets/miscellaneous/png_63qwb1_5293.png" alt="Brain Academy Logo" class="header-logo">
              </div>
-             <div class="header-bottom-box">
-                <div class="header-bottom-text">
-                    IX SMP | Kurikulum Merdeka | [TKA] Bentuk Aljabar dan Fungsi | Relasi dan Fungsi | Pertemuan 14
-                </div>
-            </div>
         </header>
         <div class="content-wrapper">
             <h2 class="section-title">3. Kunci Jawaban dan Pembahasan</h2>
@@ -457,11 +455,6 @@
                  </div>
                  <img src="https://imgix3.ruangguru.com/assets/miscellaneous/png_63qwb1_5293.png" alt="Brain Academy Logo" class="header-logo">
              </div>
-             <div class="header-bottom-box">
-                <div class="header-bottom-text">
-                    IX SMP | Kurikulum Merdeka | [TKA] Bentuk Aljabar dan Fungsi | Relasi dan Fungsi | Pertemuan 14
-                </div>
-            </div>
         </header>
         <div class="content-wrapper">
              <div class="pembahasan-box">
@@ -563,11 +556,6 @@
                  </div>
                  <img src="https://imgix3.ruangguru.com/assets/miscellaneous/png_63qwb1_5293.png" alt="Brain Academy Logo" class="header-logo">
              </div>
-             <div class="header-bottom-box">
-                <div class="header-bottom-text">
-                    IX SMP | Kurikulum Merdeka | [TKA] Bentuk Aljabar dan Fungsi | Relasi dan Fungsi | Pertemuan 14
-                </div>
-            </div>
         </header>
         <div class="content-wrapper">
              <div class="pembahasan-box">
@@ -670,11 +658,6 @@
                  </div>
                  <img src="https://imgix3.ruangguru.com/assets/miscellaneous/png_63qwb1_5293.png" alt="Brain Academy Logo" class="header-logo">
              </div>
-             <div class="header-bottom-box">
-                <div class="header-bottom-text">
-                    IX SMP | Kurikulum Merdeka | [TKA] Bentuk Aljabar dan Fungsi | Relasi dan Fungsi | Pertemuan 14
-                </div>
-            </div>
         </header>
         <div class="content-wrapper">
             <div class="pembahasan-box">
@@ -766,11 +749,6 @@
                  </div>
                  <img src="https://imgix3.ruangguru.com/assets/miscellaneous/png_63qwb1_5293.png" alt="Brain Academy Logo" class="header-logo">
              </div>
-             <div class="header-bottom-box">
-                <div class="header-bottom-text">
-                    IX SMP | Kurikulum Merdeka | [TKA] Bentuk Aljabar dan Fungsi | Relasi dan Fungsi | Pertemuan 14
-                </div>
-            </div>
         </header>
         <div class="content-wrapper">
              <div class="pembahasan-box">
