--- a/myg/index.html
+++ b/myg/index.html
@@ -229,42 +229,29 @@
 
         /* --- PRINT STYLES --- */
         @media print {
-            @page {
-                size: A4;
-                margin: 0; /* CRITICAL: Must be 0 to let the .page element control everything */
-            }
-
-            body { 
-                background: none;
-                margin: 0;
-            }
-            .page-container{
-                margin: 0;
-                box-shadow: none;
-            }
-
-            .page { 
-                margin: 0; 
-                box-shadow: none; 
-                page-break-after: always;
-                height: auto; /* Let content flow */
-                min-height: 0;
-            }
-
-            .page:last-of-type {
-                page-break-after: avoid;
-            }
-
-            .pembahasan-box {
-                break-inside: avoid; /* Try to keep question blocks from splitting */
-            }
-
-            /* Force background colors to print */
-            .header-top-box, .header-bottom-text, .soal-card td:first-child, .summary-table .summary-table-header td, .pembahasan-detail {
-                -webkit-print-color-adjust: exact; 
-                print-color-adjust: exact;
-            }
-        }
+  @page {
+    size: A4;
+    margin: 0;
+  }
+  body, html {
+    margin: 0 !important;
+    padding: 0 !important;
+    background: none !important;
+  }
+  .page {
+    width: 21cm !important;
+    min-height: 29.7cm !important;
+    margin: 0 !important;
+    padding: 0.5cm !important;
+    box-shadow: none !important;
+    page-break-after: always;
+    break-after: page;
+  }
+  .page-header, .page-footer {
+    /* pastikan tidak fixed, biar tetap masuk di area */
+    position: relative !important;
+  }
+}
     </style>
 </head>
 <body>
