--- a/holidayprogram/KerangkaBesar/index.html
+++ b/holidayprogram/KerangkaBesar/index.html
@@ -295,7 +295,7 @@
             <a class="nav-link" onclick="showPage('detail-tim-7-9', this)">Detail (Tim 7-9 thn)</a>
             <a class="nav-link" onclick="showPage('detail-individu-5-7', this)">Detail (Individu 5-7 thn)</a>
             <a class="nav-link" onclick="showPage('detail-tim-5-7', this)">Detail (Tim 5-7 thn)</a>
-            <a class="nav-link" onclick="showPage('contoh-game', this)">Contoh Game</a>
+            <a class="nav-link" onclick="showPage('contoh-game', this)">Contoh Game (Latihan Mandiri)</a>
         </nav>
 
         <main>
@@ -410,7 +410,7 @@
                             <strong>Struktur Progresif yang Membangun Antusiasme:</strong> Alur 3 hari (Training -> The Gauntlet -> Grand Finale) memberikan progresi yang jelas. Setiap hari terasa berbeda dan tingkat kesulitannya meningkat, memuncak pada sebuah "Grand Finale" yang epik, berbeda dari struktur 3 sesi dengan tema yang sama.
                         </li>
                          <li>
-                            <strong>Pengalaman Interaktif Modern:</strong> Dengan adanya prototype game interaktif dan format misi yang dipandu secara live, program ini menawarkan pengalaman yang lebih modern dan dinamis dibandingkan aktivitas berbasis worksheet tradisional, baik untuk kelas online maupun offline.
+                            <strong>Pengalaman Interaktif Modern (Blended):</strong> Program ini menggabungkan dua jenis pengalaman interaktif: **kompetisi live di kelas** menggunakan platform seperti Kahoot!/Quizizz yang bisa menampilkan leaderboard langsung, dan **latihan mandiri di rumah** melalui game web custom (seperti contoh di tab 'Contoh Game') yang memberikan latihan tambahan dengan batasan waktu.
                         </li>
                         <li>
                             <strong>Relevansi dengan Budaya Populer:</strong> Dengan mengadopsi semangat dari acara yang sedang tren, program ini menjadi lebih relevan dan menarik bagi target audiens, memberikannya nilai jual yang lebih kuat.
@@ -463,13 +463,11 @@
                     <h4>3. Tantangan Cepat & Closing (20 Menit)</h4>
                     <div class="activity-detail">
                         <ul>
-                            <li><strong>Aktivitas Guru:</strong> Meluncurkan segmen "Tantangan Cepat", sebuah kuis interaktif berkecepatan tinggi via Kahoot!/Quizizz. Mengomentari <em>leaderboard live</em> dan menyampaikan narasi penutup.</li>
+                            <li><strong>Aktivitas Guru:</strong> Meluncurkan segmen "Tantangan Cepat". Menjelaskan bahwa ini akan menggunakan platform seperti Kahoot!/Quizizz untuk menampilkan leaderboard live. Mengomentari hasil dan menyampaikan narasi penutup.</li>
                             <li><strong>Aktivitas Siswa:</strong> Bersaing dalam kuis, mencatat petunjuk untuk Kode Akses.</li>
                         </ul>
                          <div class="platform-note">
-                            <strong>Pembeda Online/Offline:</strong><br>
-                            - <strong>Online:</strong> Kuis menggunakan platform interaktif seperti Kahoot! atau Quizizz.<br>
-                            - <strong>Offline:</strong> Bisa tetap menggunakan Kahoot! (jika siswa membawa gawai) atau menggunakan format angkat tangan/mini whiteboard dengan timer di proyektor.
+                            <strong>Platform:</strong> Kuis menggunakan platform interaktif seperti **Kahoot!** atau **Quizizz** untuk memungkinkan leaderboard ditampilkan secara real-time.
                         </div>
                     </div>
                     <div class="narasi">
@@ -503,7 +501,7 @@
                  <div class="activity-block">
                     <h4>2. Tantangan Cepat: "Asteroid Field Dash" (15 Menit)</h4>
                      <div class="activity-detail">
-                        <p><strong>Deskripsi:</strong> Segmen latihan cepat untuk memulai sesi. Peserta akan menghadapi soal-soal hitungan dasar dalam platform game (Kahoot!/Quizizz) dengan timer yang sangat singkat per soal untuk memanaskan otak dan memperebutkan poin pertama hari ini.</p>
+                        <p><strong>Deskripsi:</strong> Segmen latihan cepat untuk memulai sesi, menggunakan platform game (Kahoot!/Quizizz) dengan timer yang sangat singkat per soal untuk memanaskan otak dan memperebutkan poin pertama hari ini.</p>
                         <div class="contoh-soal">
                            <strong>Contoh Soal:</strong><br>
                            1. Manakah yang lebih besar: 0.85 atau 5/6?<br>
@@ -970,74 +968,17 @@
                 </div>
 
             </section>
-
-            <!-- ==================== HALAMAN 7: CONTOH DETAIL (INDIVIDU 7-9) ==================== -->
-            <section id="detail-individu-7-9" class="page">
-                <h2>Rencana Detail Aktivitas (Individu 7-9 Tahun)</h2>
-                <p>Berikut adalah penjabaran alur sesi harian untuk tema "Misi Kode Rahasia: Petualangan Detektif".</p>
-                <!-- Isi detail 7-9 Individu -->
-                <h3>Hari 1: Pelatihan Detektif Junior (80 Menit)</h3>
-                 <div class="activity-block">
-                    <h4>1. Opening: Panggilan untuk Detektif (10 Menit)</h4>
-                    <div class="narasi">"Selamat datang, Detektif Cilik! Ada sebuah misteri besar di markas Mathchamps, dan kami butuh bantuan kalian! Sebuah brankas rahasia terkunci, dan kita harus menemukan kodenya dalam 3 hari. Hari ini, kita akan berlatih dua skill penting: memecahkan soal cerita dan menganalisis simbol!"</div>
-                </div>
-                <div class="activity-block">
-                    <h4>2. Latihan 1: Menginterogasi Saksi (25 Menit)</h4>
-                    <p><strong>Konsep:</strong> Soal Cerita Perkalian & Pembagian dengan Bar Model.</p>
-                    <div class="contoh-soal"><strong>Soal Cerita:</strong> "Seorang saksi mata melihat pencuri meletakkan 24 permata ke dalam 4 kotak berbeda. Setiap kotak berisi jumlah permata yang sama. Berapa permata di setiap kotak?" Guru akan memandu cara menggambar Bar Model untuk memvisualisasikan 24 dibagi 4.</div>
-                </div>
-                 <div class="activity-block">
-                    <h4>3. Latihan 2: Menganalisis Simbol Misterius (25 Menit)</h4>
-                    <p><strong>Konsep:</strong> Simetri & Pencerminan.</p>
-                    <div class="contoh-soal"><strong>Aktivitas:</strong> Guru menunjukkan sebuah "simbol petunjuk" yang hanya setengah gambar (misal: setengah gambar kunci). "Detektif, untuk melihat bentuk utuhnya, kita harus mencerminkannya! Coba kalian gambar setengahnya lagi!"</div>
-                </div>
-                <div class="activity-block">
-                    <h4>4. Tantangan Cepat & Closing (20 Menit)</h4>
-                    <p>Sebuah kuis cepat via Kahoot! berisi soal perkalian dasar dan simetri sederhana.</p>
-                    <div class="hook-box">
-                        <h4>✨ Petunjuk Pertama Ditemukan! ✨</h4>
-                        <p>Kalian menemukan sebuah catatan: "Digit pertama kode brankas adalah jawaban dari soal terakhir di latihanmu!"</p>
-                    </div>
-                </div>
-            </section>
             
-            <!-- ==================== HALAMAN 8: CONTOH DETAIL (TIM 7-9) ==================== -->
-            <section id="detail-tim-7-9" class="page">
-                <h2>Rencana Detail Aktivitas (Format Tim 7-9 Tahun)</h2>
-                <p>Berikut adalah skema alternatif untuk tema "Misi Kode Rahasia" yang difokuskan pada kolaborasi tim detektif.</p>
-                <!-- Isi detail 7-9 Tim -->
-                <h3>Hari 1: Latihan & Pembentukan Tim Investigasi (80 Menit)</h3>
-                 <div class="activity-block">
-                    <p>Alur sama dengan format individu. Di akhir sesi, guru mengumumkan bahwa berdasarkan hasil kuis, peserta akan dibagi menjadi beberapa "Tim Investigasi" (Tim Alpha, Tim Bravo, dll) pada hari berikutnya.</p>
-                </div>
-                <h3>Hari 2: Penyelidikan Lapangan (80 Menit)</h3>
-                <div class="activity-block">
-                    <h4>1. Opening: Pembentukan Tim & Misi Hari Ini (15 Menit)</h4>
-                    <div class="narasi">"Selamat datang kembali, Detektif! Tim Investigasi telah dibentuk! Tim Alpha adalah [...], Tim Bravo adalah [...]. Misi kalian hari ini: kumpulkan dua petunjuk berikutnya dengan bekerja sama!"</div>
-                </div>
-                <div class="activity-block">
-                    <h4>2. Tantangan Tim 1: Menyusun Laporan Saksi (30 Menit)</h4>
-                    <p><strong>Deskripsi:</strong> Setiap tim diberikan satu soal cerita kompleks yang membutuhkan Bar Model. Mereka harus berdiskusi di breakout room/meja kelompok untuk menyelesaikannya bersama.</p>
-                    <div class="contoh-soal"><strong>Soal Tim:</strong> "Tim Alpha, kalian menemukan catatan: 'Ada 3 kantung barang bukti, setiap kantung berisi 8 koin. Lalu, 5 koin terjatuh.' Berapa total koin yang tersisa? Gambarkan solusimu dengan Bar Model!"</div>
-                </div>
-                <div class="activity-block">
-                    <h4>3. Tantangan Tim 2: Estafet Gambar Simetris (30 Menit)</h4>
-                    <p><strong>Deskripsi:</strong> Lomba estafet di mana setiap anggota tim bergiliran lari ke papan tulis (offline) atau menggambar di whiteboard digital (online) untuk melengkapi satu bagian dari gambar simetris yang besar.</p>
-                </div>
-                 <div class="activity-block">
-                    <h4>4. Closing (5 Menit)</h4>
-                    <div class="narasi">"Kerja tim yang hebat! Kalian berhasil mengumpulkan semua petunjuk. Besok, kita akan gabungkan semuanya untuk membuka brankas rahasia di misi terakhir!"</div>
-                </div>
-                <h3>Hari 3: Final - Membuka Brankas (80 Menit)</h3>
-                <div class="activity-block">
-                    <p><strong>Deskripsi:</strong> Misi final live. Guru akan memberikan serangkaian teka-teki. Jawaban dari setiap teka-teki adalah kombinasi angka dari petunjuk-petunjuk yang sudah dikumpulkan tim di hari-hari sebelumnya. Tim pertama yang berhasil "membuka brankas" adalah pemenangnya.</p>
-                </div>
-            </section>
-            
-             <!-- ==================== HALAMAN 9: CONTOH GAME ==================== -->
+             <!-- ==================== HALAMAN 6: CONTOH GAME ==================== -->
             <section id="contoh-game" class="page">
-                <h2>Contoh Prototype Game "Tantangan Cepat"</h2>
-                <p>Berikut adalah contoh game interaktif sederhana yang bisa digunakan untuk segmen "Tantangan Cepat" di dalam kelas. Game ini menguji kecepatan dan akurasi dalam menjawab soal-soal matematika dasar dengan batasan waktu, memberikan pengalaman yang seru dan kompetitif.</p>
+                <h2>Contoh Prototype Game (Latihan Mandiri)</h2>
+                <p>Berikut adalah *prototype* game yang bisa diberikan kepada siswa sebagai **latihan mandiri di rumah**. Berbeda dengan kuis di kelas yang menggunakan Kahoot!/Quizizz untuk leaderboard bersama, game ini memberikan beberapa keuntungan:</p>
+                <ul>
+                    <li><strong>Latihan Tambahan:</strong> Siswa bisa mengasah kembali materi yang dipelajari di kelas.</li>
+                    <li><strong>Simulasi Tekanan Waktu:</strong> Dengan *timer* yang jelas, siswa terbiasa berpikir cepat.</li>
+                    <li><strong>Feedback Instan:</strong> Adanya pembahasan langsung membantu siswa belajar dari kesalahan secara mandiri.</li>
+                </ul>
+                <p>Game ini bisa dibagikan melalui link sederhana di akhir sesi.</p>
 
                 <div id="game-container">
                     <!-- Start Screen -->
