Update slide title and description for AI training

--- a/patom_AI/pertemuan/6/index.html
+++ b/patom_AI/pertemuan/6/index.html
@@ -205,8 +205,8 @@
         <section class="slide active theme-gradient-blue">
             <div class="text-center text-white">
                 <div class="bg-white/20 inline-block px-6 py-2 rounded-full text-sm font-semibold mb-4 backdrop-blur-sm">PELATIHAN UNTUK GURU MATEMATIKA</div>
-                <h1 class="text-6xl font-extrabold mb-4" style="text-shadow: 0 3px 15px rgba(0,0,0,0.2);">Meningkatkan Kualitas Mengajar dengan AI</h1>
-                <p class="text-2xl opacity-80">Panduan Praktis AI untuk Pembelajaran Matematika</p>
+                <h1 class="text-6xl font-extrabold mb-4" style="text-shadow: 0 3px 15px rgba(0,0,0,0.2);">Formul-AI for Better Teaching</h1>
+                <p class="text-2xl opacity-80">Meningkatkan Kualitas Mengajar dengan AI</p>
             </div>
         </section>
 
