--- a/holidayprogram/ideation/tema/new/index.html
+++ b/holidayprogram/ideation/tema/new/index.html
@@ -100,8 +100,8 @@
                     </div>
                     <div class="bg-white/20 backdrop-blur-sm p-6 rounded-xl shadow-lg">
                         <h3 class="text-xl font-bold mb-2">Tema Mingguan</h3>
-                        <p class="text-lg opacity-90">Wk 1: Sumatera & Jawa</p>
-                        <p class="text-lg opacity-90">Wk 2: Kalimantan, Sulawesi & Papua</p>
+                        <p class="text-lg opacity-90">Week 1: Sumatera & Jawa</p>
+                        <p class="text-lg opacity-90">Week 2: Kalimantan, Sulawesi & Papua</p>
                     </div>
                 </div>
             </div>
