--- a/holidayprogram/ideation/tema/new2/index.html
+++ b/holidayprogram/ideation/tema/new2/index.html
@@ -530,7 +530,7 @@
                   </h3>
                   <p class="text-lg font-medium text-gray-700">11 – 15 tahun</p>
                   <p class="text-lg italic text-red-600 font-medium my-4">
-                    “Navigate Challenges with Logic and Precision!”
+                    “Navigate Numbers. Master Strategies.”
                   </p>
                   <h5 class="font-bold text-gray-800 mb-2">
                     Ciri Pembelajaran:
