--- a/holidayprogram/ideation/tema/new2/index.html
+++ b/holidayprogram/ideation/tema/new2/index.html
@@ -749,7 +749,7 @@
                     >
                     <span
                       class="bg-yellow-100 text-yellow-800 font-semibold px-4 py-2 rounded-full"
-                      >📘 Island Mission Logbook</span
+                      >📘 Adventurer's Logbook</span
                     >
                     <span
                       class="bg-red-100 text-red-800 font-semibold px-4 py-2 rounded-full"
@@ -864,14 +864,12 @@
                       berbeda.
                     </p>
                     <p>
-                      Para Explorers berperan sebagai pembeli dan pedagang,
-                      menghitung uang dengan koin mainan, mengenali bentuk dan
-                      pola pada kain, serta menjumlahkan harga belanjaan mereka.
+                      Para Explorers berperan sebagai pembeli dan pedagang melakukan transaksi jual beli,
+                      menghitung uang dengan koin mainan, serta mengenali bentuk dan
+                      pola pada kain.
                     </p>
                     <p>
-                      Sepanjang minggu, anak berlatih menghitung, mengenal nilai
-                      uang, dan membuat pola berulang sederhana yang akan mereka
-                      gunakan untuk membuat peta pasar di akhir sesi.
+                      Hasil dari semua aktivitas akan digunakan untuk membuat peta pasar di akhir sesi.
                     </p>
                   </div>
                   <!-- Lesson Focus baru (DIKEMBALIKAN ke <ul>) -->
@@ -927,7 +925,7 @@
                       ukuran berbeda!
                     </p>
                     <p>
-                      Anak mengukur panjang jejak menggunakan “penggaris
+                      Explorers mengukur panjang jejak menggunakan “penggaris
                       kerang”, membandingkan hasil ukurannya, dan mencatat
                       jumlahnya dalam grafik gambar sederhana.
                     </p>
@@ -1016,7 +1014,7 @@
                   class="bg-gray-50 border border-gray-200 rounded-xl p-6 hover:shadow-md transition-shadow flex flex-col"
                 >
                   <h5 class="text-xl font-bold text-gray-900 mb-2">
-                    🕰️ “Counting Minutes across the Islands”
+                    🕰️ “Timing the Journeys across the Islands”
                   </h5>
                   <!-- DIKEMBALIKAN: Label "Week 1" -->
                   <p class="text-sm font-medium text-gray-500 mb-4">
@@ -1033,8 +1031,8 @@
                       dan sudut yang terbentuk di antaranya.
                     </p>
                     <p>
-                      Sepanjang minggu, anak mencatat hasil pengukuran waktu dan
-                      sudut untuk membuat Island Time Planner di akhir sesi.
+                      Sepanjang minggu, adventurers mencatat hasil pengukuran waktu dan
+                      sudut untuk membuat Island Journey Logbook di akhir sesi.
                     </p>
                   </div>
                   <h6 class="font-semibold text-gray-800 mb-2">
@@ -1061,7 +1059,7 @@
                       class="text-yellow-800 text-sm font-medium bg-yellow-100 border border-yellow-200 rounded-lg p-3"
                     >
                       <span class="font-bold text-base block mb-1"
-                        >🎨 Project Akhir: “Island Time Planner”</span
+                        >🎨 Project Akhir: “Island Journey Logbook”</span
                       >
                       peta jadwal perjalanan berisi waktu, jarak, dan sudut
                       landmark yang dijelajahi.
@@ -1087,15 +1085,12 @@
                     <p>
                       Para Adventurers mencatat frekuensi keberangkatan kapal,
                       menyelesaikan masalah penjadwalan pelayaran (menggunakan
-                      KPK), dan membagi hasil tangkapan secara adil antar-kapal
-                      (menggunakan FPB dan rasio).
-                    </p>
-                    <p>
-                      Mereka juga membuat grafik sederhana untuk menunjukkan
+                      KPK), membagi hasil tangkapan secara adil antar-kapal
+                      (menggunakan FPB dan rasio), dan membuat grafik sederhana untuk menunjukkan
                       aktivitas setiap pelabuhan.
                     </p>
                     <p>
-                      Seluruh data disusun menjadi Island Mission Logbook di
+                      Seluruh data disusun menjadi Adventurer's Logbook di
                       akhir minggu.
                     </p>
                   </div>
@@ -1112,7 +1107,7 @@
                   <!-- MENAMBAHKAN BLOK AKTIVITAS & PROYEK WEEK 2 -->
                   <div class="mt-auto pt-4 border-t border-gray-200 mt-6">
                     <h6 class="font-semibold text-gray-800 mb-2">
-                      Aktivitas & Project Akhir (Week 2):
+                      Aktivitas & Project Akhir:
                     </h6>
                     <p class="text-gray-700 text-sm mb-2">
                       <span class="font-medium">Aktivitas:</span> menyelesaikan masalah penjadwalan kapal dengan KPK, membagi hasil tangkapan secara adil dengan FPB, menampilkan data dalam grafik batang.
@@ -1122,7 +1117,7 @@
                       class="text-yellow-800 text-sm font-medium bg-yellow-100 border border-yellow-200 rounded-lg p-3"
                     >
                       <span class="font-bold text-base block mb-1"
-                        >🎨 Project Akhir: “Island Mission Logbook”</span
+                        >🎨 Project Akhir: “Eastern Ports Logbook”</span
                       >
                       laporan misi berisi tabel, grafik, dan penyelesaian
                       masalah jadwal serta pembagian hasil di pelabuhan Timur
@@ -1229,7 +1224,7 @@
                       class="text-red-800 text-sm font-medium bg-red-100 border border-red-200 rounded-lg p-3"
                     >
                       <span class="font-bold text-base block mb-1"
-                        >📘 Project Akhir: “Island Trade Report”</span
+                        >📘 Project Akhir: “Western Trade Blueprint”</span
                       >
                       laporan bisnis mini berisi tabel harga, persentase
                       keuntungan, dan analisis hasil jual-beli antar-pulau.
@@ -1258,9 +1253,9 @@
                       pasang surut dan jalur pelayaran.
                     </p>
                     <p>
-                      Anak belajar bagaimana angka dapat membantu mengambil
+                      Voyagers akan belajar bagaimana angka dapat membantu mengambil
                       keputusan cerdas di laut luas, lalu merangkum temuannya
-                      dalam Voyage Logbook.
+                      dalam Eastern Voyage Blueprint.
                     </p>
                   </div>
                   <h6 class="font-semibold text-gray-800 mb-2">
@@ -1286,7 +1281,7 @@
                       class="text-red-800 text-sm font-medium bg-red-100 border border-red-200 rounded-lg p-3"
                     >
                       <span class="font-bold text-base block mb-1"
-                        >📗 Project Akhir: “Voyage Logbook”</span
+                        >📗 Project Akhir: “Eastern Voyage Blueprint”</span
                       >
                       jurnal ekspedisi berisi data rasio, peluang, dan grafik
                       pelayaran hasil eksplorasi di Timur Nusantara.
@@ -3202,8 +3197,3 @@
     </script>
   </body>
 </html>
-
-
-
-
-
