--- a/holidayprogram/ideation/tema/new2/index.html
+++ b/holidayprogram/ideation/tema/new2/index.html
@@ -640,10 +640,10 @@
                           >Batik Market</span
                         ><span
                           class="bg-white text-blue-700 px-3 py-1 rounded-full font-medium text-sm shadow-sm border border-blue-200"
-                          >Candi Town</span
+                          >Island Journey</span
                         ><span
                           class="bg-white text-blue-700 px-3 py-1 rounded-full font-medium text-sm shadow-sm border border-blue-200"
-                          >Spice Route</span
+                          >Western Trades</span
                         >
                       </div>
                     </div>
@@ -654,13 +654,13 @@
                       <div class="flex flex-wrap gap-2">
                         <span
                           class="bg-white text-blue-700 px-3 py-1 rounded-full font-medium text-sm shadow-sm border border-blue-200"
-                          >Rainforest Footprints</span
+                          >Island Footprints</span
                         ><span
                           class="bg-white text-blue-700 px-3 py-1 rounded-full font-medium text-sm shadow-sm border border-blue-200"
-                          >River Journeys</span
+                          >Eastern Ports</span
                         ><span
                           class="bg-white text-blue-700 px-3 py-1 rounded-full font-medium text-sm shadow-sm border border-blue-200"
-                          >Sea Routes</span
+                          >Eastern Navigation</span
                         >
                       </div>
                     </div>
@@ -911,7 +911,7 @@
                   class="bg-gray-50 border border-gray-200 rounded-xl p-6 hover:shadow-md transition-shadow flex flex-col"
                 >
                   <h5 class="text-xl font-bold text-gray-900 mb-2">
-                    🐚 “Exploring Islands of Footprints and Shells”
+                    🐚 “Measuring Footprints & Shells by the Shore”
                   </h5>
                   <!-- DIKEMBALIKAN: Label "Week 2" -->
                   <p class="text-sm font-medium text-gray-500 mb-4">
@@ -1022,17 +1022,7 @@
                   </p>
                   <div class="text-gray-700 mb-4 space-y-3 flex-grow">
                     <p>
-                      Para Adventurers menjelajahi kota-kota bersejarah di Barat
-                      Nusantara sambil menyusun jadwal perjalanan mereka.
-                    </p>
-                    <p>
-                      Mereka membaca jam analog dan digital, menghitung durasi
-                      antar-lokasi, serta menemukan pola pergerakan jarum jam
-                      dan sudut yang terbentuk di antaranya.
-                    </p>
-                    <p>
-                      Sepanjang minggu, adventurers mencatat hasil pengukuran waktu dan
-                      sudut untuk membuat Island Journey Logbook di akhir sesi.
+                      Para Adventurers menjelajahi kota-kota bersejarah di Barat Nusantara sambil menyusun jadwal perjalanan mereka. Sepanjang petualangan, mereka membaca jam analog dan digital, menghitung durasi antar-lokasi, serta menemukan pola pergerakan jarum jam dan sudut yang terbentuk di antaranya. Semua hasil pengamatan waktu dan sudut tersebut dicatat dan disusun menjadi Island Journey Logbook di akhir sesi.
                     </p>
                   </div>
                   <h6 class="font-semibold text-gray-800 mb-2">
@@ -1318,11 +1308,9 @@
                 🧵 WEEK 1 – Counting Colors at the Batik Market
               </h3>
               <p class="text-lg text-gray-700 max-w-4xl">
-                Pasar batik di Yogyakarta mendadak ramai! Setiap kios punya
-                harga, pola, dan jenis kain berbeda. Para penjelajah akan
-                menghitung uang, menghitung jenis kain, dan mengenali pola batik
-                sambil membantu pedagang menata lapaknya.
+                Pasar batik sedang ramai! Setiap kios punya harga, pola bentuk, dan jenis kain berbeda. Para penjelajah menghitung uang, mengelompokkan jenis kain, dan mengenali pola bentuk sederhana sambil membantu pedagang menata lapaknya.
               </p>
+
             </header>
 
             <!-- Tabel Sesi Week 1 -->
@@ -1492,8 +1480,7 @@
               class="mt-8 bg-green-50 border-2 border-green-200 rounded-2xl p-8"
             >
               <h4 class="text-2xl font-bold text-green-800 mb-4 text-center">
-                🎨 PROJECT AKHIR: “Explorer’s Discovery Map – Batik Market
-                Edition”
+                🎨 PROJECT AKHIR: “Explorer’s Discovery Map – My Batik Market Map”
               </h4>
               <p class="text-center text-lg text-gray-700 mb-6">
                 Proyek akhir ini merupakan gabungan dari seluruh kegiatan 3 sesi
@@ -1527,14 +1514,11 @@
           <article class="mb-16">
             <header class="mb-8">
               <h3 class="text-3xl md:text-4xl font-bold text-gray-900 mb-3">
-                🌿 WEEK 2 – Measuring Footprints in the Rainforest
+                🌿 WEEK 2 – Measuring Footprints & Shells by the Shore
               </h3>
               <p class="text-lg text-gray-700 max-w-4xl">
-                Jejak-jejak hewan muncul di tepian sungai Kalimantan! Para
-                penjelajah akan mengukur panjang langkah, menghitung jumlah
-                jejak, dan membuat grafik sederhana untuk menemukan hewan
-                misterius di hutan hujan.
-              </p>
+                Jejak-jejak hewan dan cangkang laut bermunculan di pesisir timur Nusantara — Sulawesi, Nusa Tenggara, Maluku, dan Papua! Para penjelajah mengukur panjang langkah dan ukuran cangkang, menghitung jumlahnya, dan membuat grafik sederhana untuk menemukan pola di antara temuan mereka di pantai.
+                </p>
             </header>
 
             <!-- Tabel Sesi Week 2 -->
@@ -1584,7 +1568,7 @@
                       <td class="p-4 text-gray-700 space-y-2">
                         <p>
                           <strong class="text-blue-600">Concrete:</strong>
-                          Membandingkan ukuran jejak hewan (besar–kecil) dengan
+                          Membandingkan ukuran jejak hewan atau kerang (besar–kecil) dengan
                           kaki sendiri menggunakan pita ukur.
                         </p>
                         <p>
@@ -1616,7 +1600,7 @@
                           >Sesi 2</strong
                         ><br />
                         <span class="text-gray-600"
-                          >Counting Footprints in the Jungle Trail</span
+                          >Counting Footprints and Shells along the Coast</span
                         >
                       </td>
                       <td class="p-4 font-medium text-gray-700">
@@ -1657,7 +1641,7 @@
                           >Sesi 3</strong
                         ><br />
                         <span class="text-gray-600"
-                          >Making Our Jungle Graph & Map Assembly</span
+                          >Making Our Coastal Graph & Map Assembly</span
                         >
                       </td>
                       <td class="p-4 font-medium text-gray-700">
@@ -1702,8 +1686,7 @@
               class="mt-8 bg-green-50 border-2 border-green-200 rounded-2xl p-8"
             >
               <h4 class="text-2xl font-bold text-green-800 mb-4 text-center">
-                🎨 PROJECT AKHIR: “Explorer’s Discovery Map – Rainforest
-                Edition”
+                🎨 PROJECT AKHIR: “Explorer’s Discovery Map – My Island Discovery Map”
               </h4>
               <p class="text-center text-lg text-gray-700 mb-6">
                 Proyek ini menjadi klimaks eksplorasi minggu kedua — anak
@@ -1753,13 +1736,10 @@
           <article class="mb-16">
             <header class="mb-8">
               <h3 class="text-3xl md:text-4xl font-bold text-gray-900 mb-3">
-                🕰️ WEEK 1 – Festival of Time at Candi Town
+                🕰️ WEEK 1 – Timing the Journey across the Western Lands
               </h3>
               <p class="text-lg text-gray-700 max-w-4xl">
-                Di kota candi yang megah, lonceng besar berbunyi menandakan
-                dimulainya Festival Waktu! Para adventurers berkeliling,
-                mencatat jadwal parade, menghitung selisih waktu antar atraksi,
-                dan memecahkan teka-teki jam raksasa.
+                Di kota-kota warisan di Sumatera, Jawa, dan Kalimantan, para adventurers membaca jam di menara tua, menghitung durasi perjalanan kereta, dan menemukan besar sudut pada jarum jam raksasa untuk menuntaskan itinerary harian mereka.
               </p>
               <div
                 class="mt-4 bg-gray-50 p-4 rounded-lg border border-gray-200"
@@ -3197,3 +3177,8 @@
     </script>
   </body>
 </html>
+
+
+
+
+
