Update focus areas in index.html

--- a/holidayprogram/ideation/tema/new2/index.html
+++ b/holidayprogram/ideation/tema/new2/index.html
@@ -496,7 +496,7 @@
                   </p>
                   <h5 class="font-bold text-gray-800 mb-2">Fokus Utama:</h5>
                   <p class="text-gray-700">
-                    Bilangan, pola, ukuran, data sederhana.
+                    Bilangan, pola, ukuran, bentuk 2D, uang, dan data sederhana.
                   </p>
                 </div>
                 <!-- Card 2: Math Adventurers -->
@@ -540,7 +540,7 @@
                   </p>
                   <h5 class="font-bold text-gray-800 mb-2">Fokus Utama:</h5>
                   <p class="text-gray-700">
-                    FDP, diskon & keuntungan, rasio, peta, peluang.
+                    FDP, diskon & keuntungan, rasio, line and bar graph analysis, peluang.
                   </p>
                 </div>
               </div>
