--- a/holidayprogram/workbook/8-10_tahun/tema1/index.html
+++ b/holidayprogram/workbook/8-10_tahun/tema1/index.html
@@ -677,7 +677,7 @@
         </div>
     </div>
 
-    <!-- KIT PAGE 1: JAM (Sama) -->
+    <!-- KIT PAGE 1: JAM (Disesuaikan Ukuran Jarum) -->
     <div class="a4-page flex flex-col bg-red-50 border-l-8 border-red-500">
         <header class="flex justify-between items-end border-b-2 border-red-300 pb-2 mb-4">
             <h1 class="text-xl font-bold text-red-800 uppercase">✂️ KIT #1: Perakitan Jam</h1>
@@ -694,8 +694,10 @@
         <div class="mt-auto mb-10">
              <p class="text-center font-bold text-red-800 mb-2 text-sm">JARUM JAM</p>
              <div class="flex justify-center gap-6">
-                <div class="cut-zone w-24 h-40 flex-col border-red-300 bg-white shadow-sm"><span class="absolute top-1 left-1 text-lg">✂️</span><div class="relative h-32 w-8 flex flex-col justify-end items-center"><div class="absolute bottom-2 w-3 h-3 bg-white border-2 border-black rounded-full z-10"></div><div class="w-6 h-20 bg-red-600 border-2 border-red-800 rounded-t-full rounded-b-lg flex items-center justify-center shadow-sm"></div></div><span class="text-xs font-bold text-red-800 mt-1">PENDEK</span></div>
-                <div class="cut-zone w-24 h-40 flex-col border-blue-300 bg-white shadow-sm"><span class="absolute top-1 left-1 text-lg">✂️</span><div class="relative h-32 w-8 flex flex-col justify-end items-center"><div class="absolute bottom-2 w-3 h-3 bg-white border-2 border-black rounded-full z-10"></div><div class="w-4 h-28 bg-blue-600 border-2 border-blue-800 rounded-t-full rounded-b-lg flex items-center justify-center shadow-sm"></div></div><span class="text-xs font-bold text-blue-800 mt-1">PANJANG</span></div>
+                <!-- Jarum Pendek (4cm) -->
+                <div class="cut-zone w-24 h-40 flex-col border-red-300 bg-white shadow-sm"><span class="absolute top-1 left-1 text-lg">✂️</span><div class="relative h-32 w-8 flex flex-col justify-end items-center"><div class="absolute bottom-2 w-3 h-3 bg-white border-2 border-black rounded-full z-10"></div><div class="w-6 h-[4cm] bg-red-600 border-2 border-red-800 rounded-t-full rounded-b-lg flex items-center justify-center shadow-sm"></div></div><span class="text-xs font-bold text-red-800 mt-1">PENDEK (4cm)</span></div>
+                <!-- Jarum Panjang (6cm) -->
+                <div class="cut-zone w-24 h-40 flex-col border-blue-300 bg-white shadow-sm"><span class="absolute top-1 left-1 text-lg">✂️</span><div class="relative h-32 w-8 flex flex-col justify-end items-center"><div class="absolute bottom-2 w-3 h-3 bg-white border-2 border-black rounded-full z-10"></div><div class="w-4 h-[6cm] bg-blue-600 border-2 border-blue-800 rounded-t-full rounded-b-lg flex items-center justify-center shadow-sm"></div></div><span class="text-xs font-bold text-blue-800 mt-1">PANJANG (6cm)</span></div>
              </div>
         </div>
     </div>
